Fixed Scrollbar issue!
Google to the rescue, I found code to fix it.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   line-height: 1.5em;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 header {
   background-color: #e8eef1;
   display: block;
@@ -92,7 +96,7 @@ h4 {
 }
 
 .background-video {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   object-fit: cover;
   position: absolute;
@@ -199,9 +203,19 @@ nav a:hover { color: #FF0000; }
 
 #img {
   display: block;
-  padding:0px 10px 50px 100px;
-  margin: 30px 10px 100px 50px;
-  }
+  padding:20px 10px 50px 50px;
+  margin: 10px 20px 0px 100px;
+  margin-right: 20px;}
+
+.article {
+  padding-left: 40px;
+  padding-right: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  height:auto;
+  margin-right:50px;
+  text-align: justify;
+}
 
 .flex2 {
   display: flex; /*This is the flex container containing the location content and the map. I have a feeling this is probably convoluted and that there was probably a better way...*/
